Fixed the alignment of the top-nav network info

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -38,7 +38,6 @@ tt
 .nav-header
   padding-left 60px
   display flex
-  gap 20px
 
   .brand
     display flex
@@ -65,6 +64,9 @@ tt
         font-size 18pt
         align-self center
         margin-left 5px
+
+  #svelte-network-details-host
+    margin-left 20px
 
   .whitespace
     flex-grow 1
